completed integration